# achievements-enhanced

./: Cargo.toml  \  achievements.csv  achievements.json  burndown.csv  settings.json  updater.py  wget-log  wget-log.1  wget-log.10  wget-log.11  wget-log.12  wget-log.13  wget-log.14  wget-log.15  wget-log.2  wget-log.3  wget-log.4  wget-log.5  wget-log.6  wget-log.7  wget-log.8  wget-log.9
src/: achievement_csv.rs  achievement_ui.rs  achievements.rs  application.rs  burndown.rs  default_values.rs  git.rs  main.rs  main_ui.rs  progress_tracker.rs  progress_tracker_ui.rs  settings_ui.rs  updater.rs
src/langs/: mod.rs
