[package]
name = "achievements_enhanced"
version = "2.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.38"
csv = "1.3.0"
eframe = "0.29.0"
git2 = "0.19.0"
self_update = { version = "0.41.0", features = ["archive-zip"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
